build: rename package import name from "gemini" to "gemini_webapi"
- close #8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ Issues = "https://github.com/HanaokaYuzu/Gemini-API/issues"
 
 [tool.setuptools.packages.find]
 where = ["src"]
-include = ["gemini"]
+include = ["gemini_webapi"]
 
 [tool.setuptools_scm]
 version_scheme = "post-release"
