Enhanced Gemini API with robust error handling and features
This commit includes multiple improvements:
- Enhanced authentication system with better error handling
- Added robust retry mechanisms for API calls
- Fixed TypeError in image handling by adding proper None checks
- Improved model selection interface with better organization
- Enhanced browser-cookie3 error handling with fallbacks
- Added comprehensive logging and debugging capabilities
- Created examples directory with advanced usage patterns

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,5 @@ include = ["gemini_webapi"]
 [tool.setuptools_scm]
 version_scheme = "post-release"
 local_scheme = "no-local-version"
+
+version = "0.1.1"
