fix: use named volume for cookies to resolve permission issues
- Replaced bind mount './cookies:/app/cookies' with named volume 'gemini_cookies'
- Docker manages permissions for named volumes automatically
- Resolves 'Permission denied' error when appuser tries to write to host-mounted directory
- Disabled app.py hot-reload mount for production stability

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,11 @@ services:
 
     # Volume для персистентности cookies между перезапусками
     volumes:
-      - ./cookies:/app/cookies
-      - ./app.py:/app/app.py # Опционально: hot-reload для разработки
+      - gemini_cookies:/app/cookies
+      # - ./app.py:/app/app.py # Отключено для production
+
+volumes:
+  gemini_cookies:
 
     # Открытие порта только в API режиме
     ports:
