feat: implement generic S3 image storage
- Add boto3 dependency
- Add S3 configuration variables to .env.example
- Implement S3 upload logic in app.py with Base64 fallback
- Support custom public domains for S3 links

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,11 @@ GEMINI_REFRESH_INTERVAL=540
 
 # Уровень логирования: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
+
+# S3 Storage (Optional - for image hosting)
+# Если не задано, изображения будут возвращаться как Base64
+S3_ENDPOINT_URL=https://<account_id>.r2.cloudflarestorage.com
+S3_ACCESS_KEY_ID=your_access_key
+S3_SECRET_ACCESS_KEY=your_secret_key
+S3_BUCKET_NAME=your_bucket_name
+S3_PUBLIC_DOMAIN=img.yourdomain.com  # Опционально, для публичных ссылок
