--- a/.env.example
+++ b/.env.example
@@ -33,8 +33,8 @@ API_HOST=0.0.0.0
 # ============================================
 # Gemini настройки
 # ============================================
-# Таймаут запросов в секундах
-GEMINI_TIMEOUT=30
+# Таймаут# Timeout в секундах (для генерации изображений лучше ставить больше, например 120)
+GEMINI_TIMEOUT=120
 
 # Автообновление cookies (true/false)
 GEMINI_AUTO_REFRESH=true
