--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
+    "aiohttp>=3.12.15",
     "httpx~=0.28.1",
     "loguru~=0.7.3",
     "orjson~=3.11.1",
