--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "httpx~=0.28.1",
+    "httpx[http2]~=0.28.1",
     "loguru~=0.7.3",
     "orjson~=3.11.1",
     "pydantic~=2.12.2",
